Doc intial commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 
 .DS_Store
+signatories_doc/assets/.$ont_eng_uml.drawio.bkp
+signatories_doc/assets/.$ont_eng_uml_existing_v1.drawio.bkp
+signatories_doc/assets/.$ont_eng_uml_existing_v1.drawio.dtmp
+signatories_doc/assets/.$ont_eng_uml_v2.drawio.dtmp
+signatories_doc/assets/.$ont_eng_uml_v2.drawio.bkp
+signatories_doc/signatories.aux
+signatories_doc/signatories.log
+signatories_doc/signatories.out
+signatories_doc/signatories.synctex.gz
+signatories_doc/signatories.toc
