--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ signatories_doc/signatories.log
 signatories_doc/signatories.out
 signatories_doc/signatories.synctex.gz
 signatories_doc/signatories.toc
+.ipynb_checkpoints/signatories_streamlit-checkpoint.ipynb
