UN analysis notebook

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ signatories_doc/signatories.out
 signatories_doc/signatories.synctex.gz
 signatories_doc/signatories.toc
 .ipynb_checkpoints/signatories_streamlit-checkpoint.ipynb
+.ipynb_checkpoints/un_analysis-checkpoint.ipynb
