New UN doc and some gitignores

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,23 @@ signatories_doc/signatories.synctex.gz
 signatories_doc/signatories.toc
 .ipynb_checkpoints/signatories_streamlit-checkpoint.ipynb
 .ipynb_checkpoints/un_analysis-checkpoint.ipynb
+_doc/signatories_doc/signatories.aux
+_doc/signatories_doc/signatories.log
+_doc/signatories_doc/signatories.synctex.gz
+_doc/un_analysis/un_analysis.aux
+_doc/un_analysis/un_analysis.log
+_doc/un_analysis/un_analysis.out
+_doc/un_analysis/un_analysis.synctex.gz
+_doc/un_analysis/un_analysis.toc
+_doc/signatories_doc/signatories.aux
+_doc/signatories_doc/signatories.log
+_doc/signatories_doc/signatories.synctex.gz
+_doc/signatories_doc/signatories.aux
+_doc/signatories_doc/signatories.log
+_doc/signatories_doc/signatories.synctex.gz
+_doc/signatories_doc/signatories.aux
+_doc/signatories_doc/signatories.synctex.gz
+*.gz
+*.aux
+*.log
+*.gz
