Added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ _doc/signatories_doc/signatories.synctex.gz
 *.log
 *.gz
 _doc/signatories_doc/signatories.log
+_doc/signatories_doc/signatories.aux
+_doc/signatories_doc/signatories.log
+_doc/signatories_doc/signatories.out
+_doc/signatories_doc/signatories.synctex.gz
+_doc/signatories_doc/signatories.toc
