Updates to notebook, data, and doc

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ _doc/signatories_doc/signatories.log
 _doc/signatories_doc/signatories.out
 _doc/signatories_doc/signatories.synctex.gz
 _doc/signatories_doc/signatories.toc
+data/node_table_OLD.csv
+data/links_table_OLD.csv
