--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ _doc/signatories_doc/signatories.synctex.gz
 _doc/signatories_doc/signatories.toc
 data/node_table_OLD.csv
 data/links_table_OLD.csv
+_doc/un_analysis/NOTES.pdf
