--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ _doc/signatories_doc/signatories.toc
 data/node_table_OLD.csv
 data/links_table_OLD.csv
 _doc/un_analysis/NOTES.pdf
+.ipynb_checkpoints/signatories_network_time_series-checkpoint.ipynb
