Agreements in actor space

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ data/links_table_OLD.csv
 _doc/un_analysis/NOTES.pdf
 .ipynb_checkpoints/signatories_network_time_series-checkpoint.ipynb
 .ipynb_checkpoints/tensors-checkpoint.ipynb
+.ipynb_checkpoints/agreements_in_actor_space-checkpoint.ipynb
